--- a/index.html
+++ b/index.html
@@ -396,89 +396,45 @@ if (y) y.textContent = new Date().getFullYear();
   });
 </script> 
 
-<script>
-  // 给所有图片默认懒加载 + 异步解码
-  document.querySelectorAll('img').forEach(img=>{
-    img.loading = 'lazy';
-    img.decoding = 'async';
-    img.fetchPriority = 'low';
-  });
-  // 对“首屏最需要”的那几张图（如第一个论文/项目的第一张、头像）再提一提优先级
-  document.querySelectorAll('.proj .ph img:first-child, .avatar').forEach(img=>{
-    img.loading = 'eager';
-    img.fetchPriority = 'high';
-  });
-</script>
-
-<script>
-// 只让每个相册的第1张立即加载，其余图片进入视口再加载
-const lazySlides = document.querySelectorAll('.ph img:not(:first-child)');
-lazySlides.forEach(img => {
-  if (!img.dataset.src) { img.dataset.src = img.src; }
-  img.removeAttribute('src');             // 断开立即下载
-  img.loading = 'lazy';
-  img.decoding = 'async';
-});
-const io = new IntersectionObserver(entries => {
-  entries.forEach(e => {
-    if (e.isIntersecting) {
-      const img = e.target;
-      if (img.dataset.src) { img.src = img.dataset.src; delete img.dataset.src; }
-      io.unobserve(img);
-    }
-  });
-}, { root: null, rootMargin: '200px' });  // 提前 200px 预加载
-lazySlides.forEach(img => io.observe(img));
-</script>
-
+<!-- A) CDN 改写：把相对路径 ./assets/xxx.jpg 改成 Statically 按需缩图的 CDN 地址 -->
 <script>
 document.addEventListener('DOMContentLoaded', () => {
+  // TODO：如与你仓库不一致，请改成你自己的
   const GH_USER   = 'fannie911';
   const GH_REPO   = 'homepage';
   const GH_BRANCH = 'main';
 
   function targetW(img){
-    const dpr = Math.min(window.devicePixelRatio || 1, 2);
+    const dpr = Math.min(window.devicePixelRatio || 1, 2); // 不用取更高，省流
     const box = img.closest('.ph') || img.closest('.pub') || img.parentElement;
     const w   = (box?.clientWidth || img.clientWidth || 600) * dpr;
-    return Math.max(360, Math.min(1200, Math.round(w)));
+    return Math.max(360, Math.min(1200, Math.round(w)));   // 360~1200 之间
   }
-
-  // ✅ 逐段编码路径，避免中文/空格/括号等导致 404
-  function encodePath(p){
-    return p.split('/').map(encodeURIComponent).join('/');
-  }
-
-  // ⬇⬇ 用这版替换你现有的 toStatically
-  function toStatically(url, w, q = 76){
-    // 本地相对路径转成仓库路径
-    const rawPath = url.replace(/^\.\//, '').replace(/^\//, '');
+  // 对每一段路径做编码（支持中文、空格等），但不编码斜杠
+  function encodePath(p){ return p.split('/').map(encodeURIComponent).join('/'); }
+  // 生成 Statically 按需缩图 URL（输出 JPG；不想走 CDN 的 <img> 加 data-cdn="no"）
+  function toStatically(url, w, q=76){
+    const rawPath = url.replace(/^\.\//,'').replace(/^\//,''); // 去掉 ./ 或 /
     const encPath = encodePath(rawPath);
-    const u = `https://cdn.statically.io/gh/${
+    return `https://cdn.statically.io/gh/${
       encodeURIComponent(GH_USER)}/${
       encodeURIComponent(GH_REPO)}/${
       encodeURIComponent(GH_BRANCH)}/${
       encPath}?w=${w}&q=${q}&f=jpg`;
-    return u;
   }
-
   function rewrite(img){
     const w = targetW(img);
     const fix = s => (s && !/^https?:\/\//i.test(s)) ? toStatically(s, w) : s;
-
-    // 已经懒加载占位的，用 data-src；否则直接改 src
-    if (img.dataset.src){
-      img.dataset.src = fix(img.dataset.src);
-    } else if (img.getAttribute('src')){
+    // 若你后面用懒加载把 src 挪到 data-src，这里也一并改写
+    if (img.dataset.src){ img.dataset.src = fix(img.dataset.src); }
+    else if (img.getAttribute('src')) {
       const now = img.getAttribute('src');
       if (!/^https?:\/\//i.test(now)) img.setAttribute('src', fix(now));
     }
   }
-
-  // 先统一“改写到 CDN”，再去做懒加载/相册逻辑
+  // 先统一改写所有图片到 CDN
   document.querySelectorAll('img:not([data-cdn="no"])').forEach(rewrite);
-
-  // 视口变化时按需更新（可选）
+  // 视口变化时，轻量重写（节流）
   let tid;
   window.addEventListener('resize', () => {
     clearTimeout(tid);
@@ -488,6 +444,51 @@ document.addEventListener('DOMContentLoaded', () => {
   });
 });
 </script>
+
+<!-- B) 懒加载属性兜底：首屏必要图“提前”，其余默认懒加载 -->
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+  // 兜底：所有图片懒加载 & 异步解码
+  document.querySelectorAll('img').forEach(img=>{
+    if (!img.hasAttribute('loading')) img.loading = 'lazy';
+    img.decoding = 'async';
+  });
+  // 首屏更重要的图（头像 + 每个相册第一张）优先
+  document.querySelectorAll('.avatar, .proj .ph img:first-child').forEach(img=>{
+    img.loading = 'eager';
+    img.fetchPriority = 'high';
+  });
+});
+</script>
+
+<!-- C) 相册可视懒加载：相册里非首张进入视口才真正加载 -->
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+  const slides = document.querySelectorAll('.ph img:not(:first-child)');
+  slides.forEach(img=>{
+    // 把当前（已被 A 段改写后的）src 保存到 data-src，然后移除 src 防止立刻下载
+    const current = img.getAttribute('src') || img.currentSrc;
+    if (current) img.dataset.src = current;
+    img.removeAttribute('src');
+    img.loading = 'lazy';
+    img.decoding = 'async';
+  });
+  const io = new IntersectionObserver(entries=>{
+    entries.forEach(e=>{
+      if (e.isIntersecting) {
+        const img = e.target;
+        if (img.dataset.src) {
+          img.src = img.dataset.src;
+          delete img.dataset.src;
+        }
+        io.unobserve(img);
+      }
+    });
+  }, { root: null, rootMargin: '200px' }); // 提前 200px 预加载
+  slides.forEach(img=>io.observe(img));
+});
+</script>
+
 
 </body>
 </html>
