--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               </div>
               <!-- EDIT HERE: 替换你的正式链接（DOI/期刊页） -->
               <div><a href="https://doi.org/10.1021/acssensors.5c02154" target="_blank">DOI: 10.1021/acssensors.5c02154</a> ·</div>
-              <div class="muted">简述：本研究构建了一种用于电刺激治疗与术后创面临床监测的生物活性自适应水凝胶平台，结合导电离子网络与动态交联机制，系统评估了该平台在止血、抗氧化、促血管生成及术后愈合监测中的作用。</div>
+              <div class="muted">本研究构建了一种用于电刺激治疗与术后创面临床监测的生物活性自适应水凝胶平台，结合导电离子网络与动态交联机制，系统评估了该平台在止血、抗氧化、促血管生成及术后愈合监测中的作用。</div>
             </div><!-- .ct -->
           </div><!-- .proj -->
 
@@ -177,7 +177,7 @@
                 <span class="badge">中科院一区top</span>
               </div>
               <div><a href="https://doi.org/10.1016/j.mtbio.2025.102182" target="_blank">DOI: 10.1016/j.mtbio.2025.102182</a></div>
-              <div class="muted">简述：本研究构建了微流控HAMA水凝胶微球，将聚多巴胺包覆的硒纳米粒静电-光交联嵌入，实现pH响应与粘膜粘附的结肠靶向递送，并证实其抑制LPS炎症、修复肠屏障；DSS结肠炎小鼠中显著缓解体重下降、疾病活动指数并保护结肠结构。</div>
+              <div class="muted">本研究构建了微流控HAMA水凝胶微球，将聚多巴胺包覆的硒纳米粒静电-光交联嵌入，实现pH响应与粘膜粘附的结肠靶向递送，并证实其抑制LPS炎症、修复肠屏障；DSS结肠炎小鼠中显著缓解体重下降、疾病活动指数并保护结肠结构。</div>
             </div><!-- .ct -->
           </div><!-- .proj -->
 
@@ -197,7 +197,7 @@
                 <span class="badge">中科院二区top</span>
               </div>
               <div><a href="https://doi.org/10.1093/rb/rbae127" target="_blank">DOI: 10.1093/rb/rbae127</a></div>
-              <div class="muted">简述：本文系统综述了CHs的构建策略、电子/离子导电机制及其在糖尿病溃疡、感染创面、温度损伤等复杂创伤中的应用，阐明其通过抗菌抗炎、促进细胞迁移和血管新生等机制加速组织再生。同时，文章强调CHs在实时监测、电刺激控释、自供能系统等前沿技术中的拓展潜力，并前瞻性探讨其与AI融合以实现个体化创面管理与精准治疗的未来方向。</div>
+              <div class="muted">本文系统综述了CHs的构建策略、电子/离子导电机制及其在糖尿病溃疡、感染创面、温度损伤等复杂创伤中的应用，阐明其通过抗菌抗炎、促进细胞迁移和血管新生等机制加速组织再生。同时，文章强调CHs在实时监测、电刺激控释、自供能系统等前沿技术中的拓展潜力，并前瞻性探讨其与AI融合以实现个体化创面管理与精准治疗的未来方向。</div>
             </div><!-- .ct -->
           </div><!-- .proj -->
 
@@ -213,17 +213,17 @@
                 <span class="badge">Under Review</span>
                 <span class="badge">Co-First (2nd)</span>
               </div>
-              <div class="muted">简述：本研究通过微流控光交联制备得到ChSMA微球（≈125 μm）一次性共递送MnO₂纳米酶、地塞米松与BMSC，实现ROS清除、炎症抑制和软骨再生。</div>
+              <div class="muted">本研究通过微流控光交联制备得到ChSMA微球（≈125 μm）一次性共递送MnO₂纳米酶、地塞米松与BMSC，实现ROS清除、炎症抑制和软骨再生。</div>
             </div><!-- .ct -->
           </div><!-- .proj -->
 
           <div class="proj" data-keywords="AI conductive hydrogels">
             <div class="ph">
               <img src="./assets/AI1.jpg" alt="AI综述1">
-              <img src="./assets/AI2.jpg" alt="AI综述2">
               <img src="./assets/AI3.jpg" alt="AI综述3">
               <img src="./assets/AI4.jpg" alt="AI综述4">
               <img src="./assets/AI5.jpg" alt="AI综述5">
+              <img src="./assets/AI2.jpg" alt="AI综述2">
             </div>
             <div class="ct">
               <h4>AI-powered conductive hydrogels for healthcare</h4>
@@ -233,7 +233,7 @@
                  <span class="badge">Under Review</span>
                 <span class="badge">Co-First (2nd)</span>
               </div>
-              <div class="muted">简述：本文从设计、合成到应用的全链条：通过高效处理大数据，AI加速材料优化并精准预测其性能。在医疗健康方面，AI驱动的导电水凝胶实现呼吸-心血管监测、个性化诊断、人造器官、运动康复及软体机器人等精准干预，构建人机共生新范式。</div>
+              <div class="muted">本文从设计、合成到应用的全链条：通过高效处理大数据，AI加速材料优化并精准预测其性能。在医疗健康方面，AI驱动的导电水凝胶实现呼吸-心血管监测、个性化诊断、人造器官、运动康复及软体机器人等精准干预，构建人机共生新范式。</div>
             </div><!-- .ct -->
           </div><!-- .proj -->
 
@@ -466,12 +466,10 @@ document.addEventListener('DOMContentLoaded', () => {
 <script>
 /* 自动轮播相册（.proj .ph，多图才启用） */
 (function(){
-  // 关闭自动播放的“减少动态”系统偏好
-  const prefersReduce = window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)').matches;
-  if (prefersReduce) return;
 
-  const AUTOPLAY_MS  = 3500; // 每张停留时间
-  const RESUME_AFTER = 5000; // 用户交互后多久恢复自动播放（毫秒）
+
+  const AUTOPLAY_MS  = 3000; // 每张停留时间
+  const RESUME_AFTER = 1000; // 用户交互后多久恢复自动播放（毫秒）
 
   // 启动一个相册容器的自动播放
   function start(ph){
