--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             </div>
             <div class="ct">
               <h4>带隙-尺寸可控的超声压电纳米制剂设计及其在三阴性乳腺癌治疗中的机制研究示意图</h4>
-              <p class="muted">参与国家自然科学基金的攥绘图</p>
+              <p class="muted">参与国家自然科学基金的绘图</p>
             </div>
           </div>
 
