--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
               <div class="meta">Feng X.†, <b>Ying Fang†</b>, Hongwei Yu, Yicheng Wang, Yunze Xu, Chunxiao Shi, Haike Xia, Ranjith Kumar Kankala, Aizheng Chen, Shibin Wang, Chaoping Fu*. </div>
               <div class="labels">
                 <span class="badge">Article</span>
-                <span class="badge">Under Review</span>
+                <span class="badge">Advanced Science, Under Review</span>
                 <span class="badge">Co-First (2nd)</span>
               </div>
               <div class="muted">本研究通过微流控光交联制备得到ChSMA微球（≈125 μm）一次性共递送MnO₂纳米酶、地塞米松与BMSC，实现ROS清除、炎症抑制和软骨再生。</div>
@@ -230,7 +230,7 @@
               <div class="meta">Chaoping Fu†, <b>Ying Fang†</b>, Yue Li†, Qingzhi Ji, Changyong Li, Aizheng Chen, Shibin Wang, Meng Li, Lavonda Li, Lijie Yan, Junyi Sun, Long Bai, Xingcai Zhang*. </div>
               <div class="labels">
                  <span class="badge">Review</span>
-                 <span class="badge">Under Review</span>
+                 <span class="badge">Nature Health, Under Review</span>
                 <span class="badge">Co-First (2nd)</span>
               </div>
               <div class="muted">本文从设计、合成到应用的全链条：通过高效处理大数据，AI加速材料优化并精准预测其性能。在医疗健康方面，AI驱动的导电水凝胶实现呼吸-心血管监测、个性化诊断、人造器官、运动康复及软体机器人等精准干预，构建人机共生新范式。</div>
