--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <img src="./assets/ACSsensors.jpg" alt="自适应导电水凝胶 × 电刺激">
             </div>
             <div class="ct">
-              <h4>Bioactive Self-Adaptive Hydrogel Platform for Integrated Electrical Stimulation Therapy and Clinical Monitoring of Postoperative Wound</h4>
+              <h4>Bioactive self-adaptive hydrogel platform for integrated electrical stimulation therapy and clinical monitoring of postoperative wound</h4>
               <div class="meta">
 	      <b class="me">Ying Fang</b>*, Ke Xu, Xiaochang Lu, Xiaochen Feng, Yicheng Wang, Jiawei Lin, Biaoqi Chen, Ranjith Kumar Kankala, Aizheng Chen, Shibin Wang, Yanan Wang*, Chaoping Fu*. <b>ACS Sensors</b>, 2025.</div>
               <div class="labels">
@@ -206,7 +206,7 @@
               <img src="./assets/FXC.jpg" alt="GLPM">
             </div>
             <div class="ct">
-              <h4>Injectable CSmA Hydrogel Microspheres Co-Loaded with GLPM Nanozyme, Dexamethasone, and Stem Cells for Synergistic Osteoarthritis</h4>
+              <h4>Injectable CSMA hydrogel microspheres co-Loaded with GLPM nanozyme, dexamethasone, and stem cells for synergistic osteoarthritis</h4>
               <div class="meta">Feng X.†, <b>Ying Fang†</b>, Hongwei Yu, Yicheng Wang, Yunze Xu, Chunxiao Shi, Haike Xia, Ranjith Kumar Kankala, Aizheng Chen, Shibin Wang, Chaoping Fu*. </div>
               <div class="labels">
                 <span class="badge">Article</span>
