--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="ct">
               <h4>Bioactive self-adaptive hydrogel platform for integrated electrical stimulation therapy and clinical monitoring of postoperative wound</h4>
               <div class="meta">
-	      <b class="me">Ying Fang</b>*, Ke Xu, Xiaochang Lu, Xiaochen Feng, Yicheng Wang, Jiawei Lin, Biaoqi Chen, Ranjith Kumar Kankala, Aizheng Chen, Shibin Wang, Yanan Wang*, Chaoping Fu*. <b>ACS Sensors</b>, 2025.</div>
+	      <b class="me">Ying Fang</b>, Ke Xu, Xiaochang Lu, Xiaochen Feng, Yicheng Wang, Jiawei Lin, Biaoqi Chen, Ranjith Kumar Kankala, Aizheng Chen, Shibin Wang, Yanan Wang*, Chaoping Fu*. <b>ACS Sensors</b>, 2025.</div>
               <div class="labels">
                 <span class="badge">Article</span>
                 <span class="badge">Q1</span>
