--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </div>
             <div class="ct">
               <h4>Injectable CSMA hydrogel microspheres co-Loaded with GLPM nanozyme, dexamethasone, and stem cells for synergistic osteoarthritis</h4>
-              <div class="meta">Feng X.†, <b>Ying Fang†</b>, Hongwei Yu, Yicheng Wang, Yunze Xu, Chunxiao Shi, Haike Xia, Ranjith Kumar Kankala, Aizheng Chen, Shibin Wang, Chaoping Fu*. </div>
+              <div class="meta">Xiaochen Feng.†, <b>Ying Fang†</b>, Hongwei Yu, Yicheng Wang, Yunze Xu, Chunxiao Shi, Haike Xia, Ranjith Kumar Kankala, Aizheng Chen, Shibin Wang, Chaoping Fu*. </div>
               <div class="labels">
                 <span class="badge">Article</span>
                 <span class="badge">Advanced Science, Under Review</span>
@@ -336,7 +336,7 @@
           <div class="bd">
             <p><b>专业仪器：</b>细胞、动物实验的基本操作、ELISA、免疫荧光染色等；共聚焦显微镜、FTIR、拉曼、UV-vis、TEM、SEM、DLS、热重、流式、凝胶电泳、力学试验机、源表、四探针、电化学工作站、3D打印（FDM/DLP）、超临界CO2萃取设备等</p>
             <p><b>绘图/软件：</b>Origin、GraphPad Prism、Chemdraw、Procreate、Blender、Adobe Photoshop、Adobe Illustrator、sharp 3D、3D max、R studio、MestReNova等</p>
-            <p><b>写作/综合：</b>英文论文撰写、基金材料、活动组织、公文写作、科普活动开展、宣传运营</p>
+            <p><b>写作/综合：</b>CET-4/6，英文论文撰写、基金材料、活动组织、公文写作、科普活动开展、宣传运营</p>
           </div>
         </section>
 
